--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,8 +31,7 @@
     </div>
 
     <div class="selected_audio">
-        <h4>Selected audio file</h4>
-        <h5>{{ selected_file }} details:</h5>
+        <h4>Details of audio file: {{ selected_file }}</h4>
         <ul v-if="selected_file_details">
             <li>File name: {{ selected_file_details.file_name }}</li>
             <li>Size (bytes): {{ selected_file_details.size }}</li>
@@ -42,13 +41,37 @@
         </ul>
     </div>
     <div class="selected_plugin">
-        <h4>Selected VAMP plugin</h4>
-        <h5>{{ selected_plugin }} details:</h5>
+        <h4>Details of VAMP plugin: {{ selected_plugin }}</h4>
         <ul v-if="selected_plugin_details">
             <li>Vendor: {{ selected_plugin_details.vendor }}</li>
             <li>Name: {{ selected_plugin_details.name }}</li>
             <li>Output: {{ selected_plugin_details.output }}</li>
             <li>Library file: {{ selected_plugin_details.library_file_name }}</li>
+        </ul>
+    </div>
+
+    <div class="request_button">
+        <button v-bind:disabled="!requestPossible" v-on:click="sendRequest">Send request</button>
+    </div>
+
+    <div class="request_list">
+        <h4>Extracted requests</h4>
+        <ul>
+            <li v-for="request in requests">
+                <a v-bind:name="request" v-on:click="fetchRequestDetails">{{ request }}</a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="request_details">
+        <h4>Details of request: {{ selected_request }}</h4>
+        <h5 v-if="selected_request_status">Status: {{ selected_request_status }}</h5>
+        <ul v-if="selected_request_details">
+            <li>Task ID: {{ selected_request_details.task_id }}</li>
+            <li>Audio file name: {{ selected_request_details.audio_meta.file_name }}</li>
+            <li>Plugin: {{ selected_request_details.plugin.vendor }}:{{ selected_request_details.plugin.name }}:{{
+                selected_request_details.plugin.output }}
+            </li>
         </ul>
     </div>
 </div>
