--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>audiopyle</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="custom.css">
 </head>
 <body>
 <div id="app">
@@ -22,9 +23,15 @@
         <div class="row">
             <div class="col-sm-12">
                 <ul class="nav nav-tabs">
-                    <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#makeRequest">Make request</a></li>
-                    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#browseResults">Browse results</a></li>
-                    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#analyzeCompare">Analyze & compare</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link active" data-toggle="tab" href="#makeRequest">Make request</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#browseResults">Browse results</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#analyzeCompare">Analyze & compare</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -32,57 +39,146 @@
             <div class="col-sm-12">
                 <div class="tab-content">
                     <div id="makeRequest" class="tab-pane active">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <h4>Audio files</h4>
-                                <ul>
-                                    <li v-for="audio in audio_files">
-                                        <a v-bind:name="audio" v-on:click="fetchAudioDetails">{{ audio }}</a>
-                                    </li>
-                                </ul>
+                        <div id="accordion">
+                            <div class="card">
+                                <div class="card-header" id="chooseAudioHeading">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#chooseAudio"
+                                                aria-expanded="false" aria-controls="collapseOne">
+                                            Choose an audio file
+                                        </button>
+                                    </h5>
+                                </div>
+
+                                <div id="chooseAudio" class="collapse" aria-labelledby="headingOne"
+                                     data-parent="#accordion">
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-sm-7">
+                                                <div class="table-responsive">
+                                                    <table class="table table-striped">
+                                                        <thead>
+                                                        <tr>
+                                                            <th>Audio file name</th>
+                                                            <th>Selection</th>
+                                                        </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                        <tr v-for="audio in audio_files">
+                                                            <td>{{ audio }}</td>
+                                                            <td>
+                                                                <button class="btn btn-primary btn-sm"
+                                                                        v-bind:name="audio"
+                                                                        v-on:click="fetchAudioDetails">Select
+                                                                </button>
+                                                            </td>
+                                                        </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-5">
+                                                <h6>Audio file details:</h6>
+                                                <div v-if="selected_file_details">
+                                                    <p>File name: {{ selected_file_details.file_name }}</p>
+                                                    <p>Size (bytes): {{ selected_file_details.size }}</p>
+                                                    <p>Created (UTC): {{ selected_file_details.created_on }}</p>
+                                                    <p>Modified (UTC): {{ selected_file_details.last_modification }}</p>
+                                                    <p>Accessed (UTC): {{ selected_file_details.last_access }}</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-sm-6">
-                                <h4>Details of audio file: {{ selected_file }}</h4>
-                                <ul v-if="selected_file_details">
-                                    <li>File name: {{ selected_file_details.file_name }}</li>
-                                    <li>Size (bytes): {{ selected_file_details.size }}</li>
-                                    <li>Created (UTC): {{ selected_file_details.created_on }}</li>
-                                    <li>Modified (UTC): {{ selected_file_details.last_modification }}</li>
-                                    <li>Accessed (UTC): {{ selected_file_details.last_access }}</li>
-                                </ul>
+
+
+                            <div class="card">
+                                <div class="card-header" id="chooseVampHeading">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#chooseVamp"
+                                                aria-expanded="false" aria-controls="collapseOne">
+                                            Choose VAMP plugin
+                                        </button>
+                                    </h5>
+                                </div>
+
+                                <div id="chooseVamp" class="collapse" aria-labelledby="headingOne"
+                                     data-parent="#accordion">
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-sm-7">
+                                                <div class="table-responsive">
+                                                    <table class="table table-striped">
+                                                        <thead>
+                                                        <tr>
+                                                            <th>VAMP plugin key</th>
+                                                            <th>Selection</th>
+                                                        </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                        <tr v-for="plugin in vamp_plugins">
+                                                            <td>{{ plugin }}</td>
+                                                            <td>
+                                                                <button class="btn btn-primary btn-sm"
+                                                                        v-bind:name="plugin"
+                                                                        v-on:click="fetchPluginDetails">Select
+                                                                </button>
+                                                            </td>
+                                                        </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-5">
+                                                <h6>VAMP plugin details:</h6>
+                                                <div v-if="selected_plugin_details">
+                                                    <p>Key: {{ selected_plugin }}</p>
+                                                    <p>Vendor: {{ selected_plugin_details.vendor }}</p>
+                                                    <p>Name: {{ selected_plugin_details.name }}</p>
+                                                    <p>Output: {{ selected_plugin_details.output }}</p>
+                                                    <p>Library file: {{ selected_plugin_details.library_file_name }}</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card">
+                                <div class="card-header" id="reviewConfigHeading">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#reviewConfig"
+                                                aria-expanded="false" aria-controls="collapseOne">
+                                            Review and make request
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="reviewConfig" class="collapse" aria-labelledby="headingOne"
+                                     data-parent="#accordion">
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-sm-3 offset-3">
+                                                <button role="button" class="btn btn-md btn-default"
+                                                        :class="{ disabled: nothingSelected }"
+                                                        :disabled="nothingSelected"
+                                                        v-on:click="resetSelection">Clear selection
+                                                </button>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <button role="button" class="btn btn-md btn-primary"
+                                                        :class="{ disabled: requestNotPossible }"
+                                                        :disabled="requestNotPossible"
+                                                        v-on:click="sendRequest">Send request
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <h4>VAMP plugins</h4>
-                                <ul>
-                                    <li v-for="plugin in vamp_plugins">
-                                        <a v-bind:name="plugin" v-on:click="fetchPluginDetails">{{ plugin }}</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-6">
-                                <h4>Details of VAMP plugin: {{ selected_plugin }}</h4>
-                                <ul v-if="selected_plugin_details">
-                                    <li>Vendor: {{ selected_plugin_details.vendor }}</li>
-                                    <li>Name: {{ selected_plugin_details.name }}</li>
-                                    <li>Output: {{ selected_plugin_details.output }}</li>
-                                    <li>Library file: {{ selected_plugin_details.library_file_name }}</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-3 offset-3">
-                                <button role="button" class="btn btn-md btn-default"
-                                        :class="{ disabled: nothingSelected }" :disabled="nothingSelected"
-                                   v-on:click="resetSelection">Clear selection</button>
-                            </div>
-                            <div class="col-sm-3">
-                                <button role="button" class="btn btn-md btn-primary"
-                                        :class="{ disabled: requestNotPossible }" :disabled="requestNotPossible"
-                                   v-on:click="sendRequest">Send request</button>
-                            </div>
-                        </div>
+
+
                     </div>
                     <div id="browseResults" class="tab-pane">
                         <div class="row">
